[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbannav"
version = "0.1.0"
description = "UrbanNav: research simulation framework for Urban Air Mobility (UAM)"
requires-python = ">=3.11"
readme = "README.md"
dynamic = []

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["urbannav*", "rl*", "testbed*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["urbannav", "rl", "testbed"]

[tool.pytest.ini_options]
testpaths = ["tests", "rl", "testbed"]
